--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -1,8 +1,17 @@
-.tag {
-  font-size: 0.8rem;
-  color: var(--c-text-light);
-  background-color: var(--c-accent);
-  border-radius: 10px;
-  padding: 2px 5px;
-  margin: 0 3px;
+.grid-layout {
+  display: grid;
+  grid-gap: 2rem;
+  justify-content: center;
+}
+
+@media (max-width: 850px) {
+  .grid-layout {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 850px) {
+  .grid-layout {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
