--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,14 +1,13 @@
 footer {
-  background: rebeccapurple;
+  background: var(--c-bg-elevated);
   margin-top: 2rem;
   margin-bottom: 1.45rem;
 }
 
 .footer-wrapper {
-  color: var(--c-text-light);
   text-align: center;
   margin: 0 auto;
-  max-width: 960;
+  max-width: 960px;
   padding: 1.45rem 1.0875rem;
 }
 
