--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 .resume-btn {
   background-color: transparent;
-  border: 1px solid var(--c-accent);
+  border: 1px solid var(--c-blue);
   border-radius: 3px;
   cursor: pointer;
   transition: all ease-in-out 0.15s;
