--- a/src/styles/project-card.css
+++ b/src/styles/project-card.css
@@ -2,22 +2,20 @@
   width: 100%;
   max-width: 360px;
   border-radius: 8px;
-  box-shadow: 0px 2px 15px 5px var(--c-shadow-light);
+  box-shadow: 0 2px 15px 5px var(--c-shadow-light);
+  background-color: var(--c-bg-elevated);
   margin: 0 auto;
-  padding-top: 15px;
-  padding-bottom: 30px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 15px 15px 30px;
   transition: all ease-in-out 0.15s;
 }
 
 .card:hover {
-  box-shadow: 0px 2px 25px 5px var(--c-shadow-light);
+  box-shadow: 0 2px 25px 5px var(--c-shadow-light);
   transform: translateY(-3px);
 }
 
 .image {
-  border: 1px solid blue;
+  border: 1px solid var(--c-blue);
   border-radius: 5px;
   height: 240px;
   width: 100%;
@@ -32,7 +30,7 @@
 }
 
 .data {
-  color: var(--c-text-muted);
+  color: var(--c-text-mute);
   margin-top: 5px;
 }
 
@@ -44,8 +42,8 @@
 
 .tag {
   font-size: 0.8rem;
-  color: var(--c-text-light);
-  background-color: var(--c-accent);
+  color: var(--c-black);
+  background-color: var(--c-blue);
   border-radius: 10px;
   padding: 3px 10px;
   margin-right: 5px;
