--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -5,6 +5,7 @@
 
   --c-bg: hsl(220, 16%, 22%);
   --c-bg-elevated: hsl(222, 16%, 28%);
+  --c-cursor: hsl(219, 28%, 88%);
   --c-text: hsl(219, 28%, 88%);
   --c-text-bold: hsl(219, 28%, 88%);
   --c-text-mute: hsl(219, 28%, 68%);
@@ -37,6 +38,7 @@ html {
   box-sizing: border-box;
   overflow-y: scroll;
 }
+
 body {
   color: var(--c-text);
   font-family: var(--font-sans-serif);
@@ -51,7 +53,7 @@ body {
   word-wrap: break-word;
   background-color: var(--c-bg);
   margin: 0;
-  padding: 0;
+  padding: 90px 0;
 }
 
 /* Fonts */
@@ -101,9 +103,7 @@ p {
 a {
   font-size: 1rem;
   line-height: 1rem;
-  color: var(--c-blue);
   text-decoration: none;
-
 }
 
 code {
