--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -9,7 +9,7 @@
   --c-cursor: hsl(219, 28%, 88%);
   --c-text: hsl(219, 28%, 88%);
   --c-text-bold: hsl(219, 28%, 88%);
-  --c-text-mute: hsl(219, 28%, 68%);
+  --c-text-mute: hsl(219, 18%, 68%);
   --c-selected: hsl(193, 43%, 67%);
   --c-black: hsl(222, 16%, 28%);
   --c-red: hsl(354, 42%, 56%);
@@ -57,53 +57,81 @@ body {
   padding: 0;
 }
 
+main {
+  padding-top: 90px;
+}
+
 /* Fonts */
 
-h1, h2, h3, h4, h5, h6, p, pre, code, a, span, label {
+h1, h2, h3, h4, h5, h6, p, small, pre, code, a, span, label {
   padding: 0;
   margin: 0;
+  word-break: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
+  color: var(--c-cyan);
   font-family: var(--font-monospace);
-  font-weight: bold;
   text-rendering: optimizeLegibility;
+}
+
+h1::before {
+  content: '';
+  border: 2px solid var(--c-cyan);
+  position: relative;
+  margin-right: 10px;
 }
 
 h1 {
   font-size: 2.25rem;
   line-height: 2.25rem;
+  margin-bottom: 2.25rem;
 }
 
 h2 {
-  font-size: 1.62671rem;
-  line-height: 1.62671rem;
+  font-size: 1.7rem;
+  line-height: 1.7rem;
+  margin-bottom: 1.7rem;
 }
 h3 {
-  font-size: 1.38316rem;
-  line-height: 1.38316rem;
+  font-size: 1.4rem;
+  line-height: 1.4rem;
+  margin-bottom: 1.4rem;
 }
 h4 {
-  font-size: 1rem;
-  line-height: 1rem;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+  margin-bottom: 1.2rem;
 }
 h5 {
-  font-size: 0.85028rem;
-  line-height: 0.85028rem;
+  font-size: 1rem;
+  line-height: 1rem;
+  margin-bottom: 1rem;
 }
 h6 {
-  font-size: 0.78405rem;
-  line-height: 0.78405rem;
+  font-size: 0.8rem;
+  line-height: 0.8rem;
+  margin-bottom: 0.8rem;
 }
 
 p {
-  font-size: 1.15rem;
-  line-height: 1.5rem;
+  font-size: 1rem;
+  line-height: 1.25rem;
+}
+
+.markdown p {
+  margin-bottom: 1.25rem;
+}
+
+small {
+  font-size: 0.85rem;
+  line-height: 0.85rem;
 }
 
 a {
-  font-size: 1.15rem;
-  line-height: 1.5rem;
+  color: var(--c-blue);
+  font-size: 1rem;
+  line-height: 1.25rem;
   text-decoration: none;
 }
 
@@ -139,6 +167,35 @@ code {
 
 .container {
   background-color: var(--c-bg);
+  padding: 2rem 1rem;
   margin: 0 auto;
-  max-width: 960px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    padding: 2rem 3rem;
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    padding: 2rem 5rem;
+    max-width: 1140px;
+  }
 }
