--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,7 +1,8 @@
+/** Code Block Styling **/
+
 code[class*="language-"],
 pre[class*="language-"],
-span.line-numbers-rows
-{
+span.line-numbers-rows {
     font-size: 1rem;
     line-height: 1.3rem;
     font-family: var(--font-monospace);
