--- a/src/styles/project-card.css
+++ b/src/styles/project-card.css
@@ -1,5 +1,5 @@
 .card {
-  max-width: 300px;
+  max-width: 360px;
   border-radius: 8px;
   box-shadow: 0 2px 15px 5px var(--c-shadow-light);
   background-color: var(--c-bg);
@@ -14,14 +14,10 @@
 }
 
 .image {
-  border: 1px solid var(--c-blue);
-  border-radius: 5px;
-  height: 240px;
   width: 100%;
   display: flex;
-  vertical-align: middle;
-  justify-content: center;
-  align-items: center;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .title, .desc, .links, .tags {
@@ -38,15 +34,14 @@
 }
 
 .icon {
-  height: 20px;
-  width: 20px;
-  margin-right: 5px;
+  height: 18px;
+  width: 18px;
+  margin-right: 10px;
 }
 
 .tag {
-  font-size: 0.8rem;
-  color: var(--c-dark-blue);
-  background-color: var(--c-blue);
+  font-size: 0.85rem;
+  background-color: var(--c-bg-elevated);
   border-radius: 10px;
   padding: 1px 8px;
   margin: 3px;
