--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -8,3 +8,9 @@
   margin: 15px;
   flex: 0 0 360px;
 }
+
+@media screen and (max-width: 380px){
+  .grid-layout > .card-wrapper {
+    max-width: 95%;
+  }
+}
