--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -1,8 +1,9 @@
+/* variables.scss */
+
 :root {
 	--font-sans-serif: 'Poppins', 'Avenir', Verdana, Helvetica Neue, Arial, sans-serif;
 	--font-serif: Palatino, American Typewriter, serif;
-	// --font-monospace: SourceCodePro, Palatino, Lucida Console, Consolas, Andale Mono, Courier, monospace;
-	--font-monospace: Lucida Console, Consolas, Andale Mono, Courier, monospace;
+	--font-monospace: SourceCodePro, Palatino, Lucida Console, Consolas, Andale Mono, Courier, monospace;
 
 	--c-bg-elevated: hsl(221, 21%, 29%);
 	--c-bg: hsl(221, 21%, 22%);
