--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -3,7 +3,8 @@
 :root {
 	--font-sans-serif: 'Poppins', 'Avenir', Verdana, Helvetica Neue, Arial, sans-serif;
 	--font-serif: Palatino, American Typewriter, serif;
-	--font-monospace: SourceCodePro, Palatino, Lucida Console, Consolas, Andale Mono, Courier, monospace;
+	--font-monospace: SourceCodePro, Palatino, Lucida Console, Consolas, Andale Mono, Courier,
+		monospace;
 
 	--c-bg-elevated: hsl(221, 21%, 29%);
 	--c-bg: hsl(221, 21%, 22%);
@@ -23,4 +24,3 @@
 	--c-cyan: hsl(193, 43%, 67%);
 	--c-white: hsl(218, 27%, 92%);
 }
-
